# formulation-rescue

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
cron/: dailymed-batch.cron
db/: schema.sql
reports/: phase1_summary.md  phase3_label_enrichment_summary.md  review_queues_summary.md  top100_rescueability_review.md  top100_scientific_review.md
reports/confluence_audit/: reformulation_rescue_page_153780225_update_report_20260703.md
scripts/: run_dailymed_batch.sh
src/formulation_rescue/: __init__.py  cli.py  dailymed.py  database.py  export.py  fda.py  rescueability.py  review_package.py  scientific_review.py  scoring.py  triage.py
tests/: conftest.py  test_cli.py  test_dailymed.py  test_database.py  test_fda.py  test_rescueability.py  test_review_package.py  test_scientific_review.py  test_scoring.py  test_triage.py
tests/fixtures/dailymed/: burden_label.xml  minimal_label.xml
tests/fixtures/drugs_fda/: Applications.txt  MarketingStatus.txt  MarketingStatus_Lookup.txt  Products.txt
tests/fixtures/orange_book/: exclusivity.txt  patent.txt  products.txt
